--- a/index.html
+++ b/index.html
@@ -152,15 +152,16 @@
                 <div class="col s12 m6 l3">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="http://via.placeholder.com/250x250">
+                            <img class="activator" src=" data.result.webcams[i].image.current.preview);
+">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                            <p><a href="#">This is not a link</a></p>
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Card Title</span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <div class="card-image">
+                            <span class="card-title"><i class="material-icons right">close</i>Card Title</span>
+                            <p>Here is not some more information about this product that is only revealed once clicked on.</p>
                         </div>
                     </div>
                 </div>
