--- a/indexBob.html
+++ b/indexBob.html
@@ -20,8 +20,8 @@
 
     <main>
         <div class="container">
-            <div class="row">
-                <div class="col s12">
+            <div class="cardcontent">
+                <div class="">
                     <div id="webcams">
                     </div>
                 </div>
