--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
 
                     <ul class="right hide-on-med-and-down">
                         <li class="active">
-                            <a href="#" class="indigo-text text-lighten-4">cities page</a>
+                            <a href="#" class="indigo-text text-lighten-4">City Page</a>
                         </li>
                     </ul>
 
