--- a/index2.html
+++ b/index2.html
@@ -194,6 +194,7 @@
                             }
                             $("#city-main-pic-text").focusout(function () {
                                 travelpage();
+                                $("#results-main").empty();
                             });
                             $(document).ready(function () {
                                 travelpage()
@@ -333,7 +334,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="widget_wrap" style="width:100%;height:500px;display:inline-block;">
+                                <div class="widget_wrap" id="zomato" style="width:100%;height:500px;display:inline-block;">
                                     <iframe src="https://www.zomato.com/widgets/res_search_widget.php?lat=34.0522&lon=-118.2437&establishment_type=7&theme=red&hideCitySearch=on&hideResSearch=on&sort=distance"
                                         style="position:relative;width:100%;height:100%;" border="0" frameborder="0"></iframe>
                                 </div>
@@ -355,7 +356,7 @@
                                 <p class="center blue-text text-lighten-3" id="hotel-header">Local Hotels</p>
                                 <!-- Input validator: only integers 1-20 -->
                                 <p>Number of results between 1 and 20:</p> 
-                                <input id="number" value="20">
+                                <input id="number" value="5">
                                 <button id="search-button" type="button" onclick="myFunction()">Submit</button>
                                 <p id="number-input"></p>
                                 <script>
@@ -424,6 +425,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/map.js"></script>
     <script src="assets/js/search.js"></script>
+    
 </body>
 
 </html>
