--- a/index2.html
+++ b/index2.html
@@ -312,7 +312,7 @@
 
 
                     <!-- Local hotel search -->
-                    <div class="col s12 m12 center search-results" id="form-div" style="background-color: darkblue; width: 50%; margin: auto;">
+                    <div class="col s12 m12 center search-results" id="form-div" style="background-color: darkblue; width: 80%;">
                             <div class="white-text">
                                 <p class="center blue-text text-lighten-3" id="hotel-header">Local Hotels</p>
                                 <!-- Input validator: only integers 1-20 -->
