--- a/index2.html
+++ b/index2.html
@@ -307,7 +307,7 @@
                     <div class="col s12 m6 left">
                         <div class="food-pics center">
                             <div class="row">
-                                
+                                <div class="row">
 
 
 
