--- a/index2.html
+++ b/index2.html
@@ -312,7 +312,7 @@
 
 
                     <!-- Local hotel search -->
-                                    
+                                    <div>
                     <div class="col s12 m12 center search-results" id="form-div" style="background-color: darkblue; width: 100%;">
                             <div class="white-text">
                                 <p class="center blue-text text-lighten-3" id="hotel-header">Local Hotels</p>
@@ -341,6 +341,7 @@
 
                                 </div>
                             </div>
+                         </div>
                     </div>
                 </div>
 
