--- a/index2.html
+++ b/index2.html
@@ -308,7 +308,7 @@
                         <div class="food-pics center">
                             <div class="row">
                                 <div class="row">
-
+                                </div></div>
 
 
                     <!-- Local hotel search -->
