--- a/index2.html
+++ b/index2.html
@@ -27,8 +27,7 @@
         <div class="navbar-fixed">
             <nav class="nav">
                 <div class="nav-wrapper indigo darken-3">
-                    <a href="index.html" class="brand-logo center">Insta
-                        <span class="blue-text text-lighten-1">Trip</span>
+                    <a href="index.html" class="brand-logo center">Insta<span class="blue-text text-lighten-1">Trip</span>
                     </a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse">
                         <i class="material-icons">menu</i>
